Fix checkbox alignment

--- a/app/assets/stylesheets/canvas_shim/alerts.scss
+++ b/app/assets/stylesheets/canvas_shim/alerts.scss
@@ -1,4 +1,8 @@
 #alertsTable {
+  input[type="checkbox"] {
+    margin-top: 0;
+  }
+
   #bulk-delete-btn {
     margin-left: 5px;
   }
